Use forceescape for value attribute in templates (see issue #127)

--- a/iktomi/templates/jinja2/templates/widgets/hiddeninput.html
+++ b/iktomi/templates/jinja2/templates/widgets/hiddeninput.html
@@ -1,1 +1,1 @@
-<input id="{{ widget.id }}" type="hidden" name="{{ widget.input_name|escape }}" value="{{ value|escape }}" />
+<input id="{{ widget.id }}" type="hidden" name="{{ widget.input_name|escape }}" value="{{ value|forceescape }}" />
