--- a/iktomi/templates/jinja2/templates/widgets/passwordinput.html
+++ b/iktomi/templates/jinja2/templates/widgets/passwordinput.html
@@ -1,2 +1,2 @@
-<input id="{{ widget.id }}" type="password" name="{{ widget.input_name|escape }}" value="{{ value|escape }}"
+<input id="{{ widget.id }}" type="password" name="{{ widget.input_name|escape }}" value="{{ value|forceescape }}"
        {%- if widget.classname %} class="{{ widget.classname }}"{% endif %} />
